cmake_minimum_required(VERSION 2.6)

include_directories( ${LIBIMOBOTCOMMS_SOURCE_DIR})

link_directories( ${LIBIMOBOTCOMMS_BINARY_DIR})

add_executable(simple_cpp simple.cpp)
add_executable(smooth_record smooth_record.cpp)
add_executable(simple simple.c)
add_executable(copycat copycat.cpp)
add_executable(speedtest speedtest.c)
add_executable(melodytest melodytest.c)
add_executable(twinkle twinkle.c)
add_executable(zigbeetest zigbeetest.c)
add_executable(reboot reboot.c)
add_executable(mobotinit mobotinit.c)
add_executable(ttytest ttytest.c)
add_executable(recordtest recordtest.cpp)
target_link_libraries(recordtest baroboStatic)
target_link_libraries(simple_cpp baroboStatic)
target_link_libraries(smooth_record baroboStatic)
target_link_libraries(simple baroboStatic)
target_link_libraries(copycat baroboStatic)
target_link_libraries(speedtest baroboStatic)
target_link_libraries(melodytest baroboStatic)
target_link_libraries(zigbeetest baroboStatic)
target_link_libraries(twinkle baroboStatic)
target_link_libraries(reboot baroboStatic)
target_link_libraries(mobotinit baroboStatic)
target_link_libraries(ttytest baroboStatic)
