cmake_minimum_required(VERSION 2.6)

include_directories( ${LIBIMOBOTCOMMS_SOURCE_DIR})

link_directories( ${LIBIMOBOTCOMMS_BINARY_DIR})

add_executable(simple_cpp simple.cpp)
add_executable(smooth_record smooth_record.cpp)
add_executable(simple simple.c)
add_executable(callbacktest callbacktest.c)
add_executable(callbacktest++ callbacktest++.cpp)
add_executable(copycat copycat.cpp)
add_executable(speedtest speedtest.c)
add_executable(melodytest melodytest.c)
add_executable(twinkle twinkle.c)
add_executable(zigbeetest zigbeetest.c)
add_executable(reboot reboot.c)
add_executable(mobotinit mobotinit.c)
add_executable(ttytest ttytest.c)
add_executable(recordtest recordtest.cpp)
add_executable(accel accel.cpp)
add_executable(rawstreamtest rawstreamtest.c)
target_link_libraries(recordtest barobo)
target_link_libraries(simple_cpp barobo)
target_link_libraries(callbacktest barobo)
target_link_libraries(callbacktest++ barobo)
target_link_libraries(smooth_record barobo)
target_link_libraries(simple barobo)
target_link_libraries(copycat barobo)
target_link_libraries(speedtest barobo)
target_link_libraries(melodytest barobo)
target_link_libraries(zigbeetest barobo)
target_link_libraries(twinkle barobo)
target_link_libraries(reboot barobo)
target_link_libraries(mobotinit barobo)
target_link_libraries(ttytest barobo)
target_link_libraries(accel barobo)
target_link_libraries(rawstreamtest barobo)
